debswarm (1.2.2-1) unstable; urgency=medium

  * Switch from DynamicUser to static debswarm user for reliable permissions
  * postinst creates debswarm system user/group and sets directory ownership

 -- debswarm developers <debswarm@example.com>  Mon, 16 Dec 2025 00:00:00 +0000

debswarm (1.2.1-1) unstable; urgency=medium

  * Fix CACHE_DIRECTORY to correctly override config file path setting

 -- debswarm developers <debswarm@example.com>  Mon, 16 Dec 2025 00:00:00 +0000

debswarm (1.2.0-1) unstable; urgency=medium

  * Add automatic detection of systemd CACHE_DIRECTORY and STATE_DIRECTORY
  * Fix directory validation to work with systemd ProtectSystem=strict
  * Running under systemd now works out-of-box without config changes

 -- debswarm developers <debswarm@example.com>  Mon, 16 Dec 2025 00:00:00 +0000

debswarm (1.1.1-1) unstable; urgency=medium

  * Fix import ordering in cache.go for golangci-lint

 -- debswarm developers <debswarm@example.com>  Mon, 16 Dec 2025 00:00:00 +0000

debswarm (1.1.0-1) unstable; urgency=medium

  * Replace mattn/go-sqlite3 with modernc.org/sqlite (pure Go implementation)
    - No longer requires CGO or C compiler to build
    - Enables cross-compilation without CGO toolchain
    - Works out-of-box on Windows without MinGW/TDM-GCC

 -- debswarm developers <debswarm@example.com>  Mon, 16 Dec 2025 00:00:00 +0000

debswarm (1.0.1-1) unstable; urgency=medium

  * Fix TOML config parsing for DHT duration fields (provider_ttl, announce_interval)

 -- debswarm developers <debswarm@example.com>  Sun, 15 Dec 2025 00:00:00 +0000

debswarm (1.0.0-1) unstable; urgency=medium

  * First stable release - production ready
  * Add runtime profiling (pprof endpoints at /debug/pprof/)
  * Add E2E integration tests for proxy, cache, index, and P2P flows
  * Add CLI smoke tests for command coverage
  * Add MaxHeaderBytes limit (1MB) to all HTTP servers for DoS protection
  * All critical, high, and medium priority items complete
